--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet">
-<script src="Scripts/script.js"></script>
+
 
     <title>Formulario</title>
 </head>
@@ -17,10 +17,10 @@
         <header>
             <h1>Crie uma Conta</h1>
         </header>
-        <form class="forms">
+        <form class="forms" id="forms">
             <div class="forms-control">
                 <label for="username">Nome do usuario</label>
-                <input type="text" class="username" placeholder="Username">
+                <input type="text" class="username" id="username"  placeholder="Username">
                 <i class="fa-solid fa-exclamation-circle"></i>
                 <i class="fas fa-check-circle"></i>
                 <small></small>
@@ -28,23 +28,23 @@
 
             <div class="forms-control">
                 <label for="email">Email</label>
-                <input type="text" class="email" placeholder="Email">
+                <input type="text" class="email" id="email"  placeholder="Email">
                 <i class="fa-solid fa-exclamation-circle"></i>
                 <i class="fas fa-check-circle"></i>
-                <small></small>
+                <small>Menssagem erro</small>
             </div>
 
             <div class="forms-control">
                 <label for="password">Senha</label>
-                <input type="text" class="password" placeholder="Senha">
+                <input type="password" class="password" id="password" placeholder="Senha">
                 <i class="fa-solid fa-exclamation-circle"></i>
                 <i class="fas fa-check-circle"></i>
-                <small></small>
+                <small>Menssagem erro</small>
             </div>
 
             <div class="forms-control">
                 <label for="password-connfirmation">Confirmação de senha</label>
-                <input type="text" class="password-confirmation" placeholder="Confirmação">
+                <input type="password" class="password-confirmation" id="password-confirmation" placeholder="Confirmação">
                 <i class="fa-solid fa-exclamation-circle"></i>
                 <i class="fas fa-check-circle"></i>
                 <small></small>
@@ -55,5 +55,6 @@
         </form>
     </div>
     <script src="https://kit.fontawesome.com/9a93f53371.js" crossorigin="anonymous"></script>
+    <script src="Scripts/script.js"></script>
 </body>
 </html>
